Bug 504813 - "New!" indicator still visible if newly-installed app is launched from favorites or search results list (not browse list)
Summary: "New!" indicator still visible if newly-installed app is launched from favori...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Application Launcher (Kickoff) widget (other bugs)
Version First Reported In: 6.3.90
Platform: Arch Linux Linux
: NOR minor
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2025-05-26 12:58 UTC by The Entropyst
Modified: 2025-06-04 16:12 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description The Entropyst 2025-05-26 12:58:44 UTC
SUMMARY 
The "New!" indicator is still visible after launching a newly installed app from search.

STEPS TO REPRODUCE
1. Install an app in order to have a desktop entry with the new indicator in kickoff.
2. Launch the app using the build it search bar in kickoff.

OBSERVED RESULT
The "New!" indicator is still visible.

EXPECTED RESULT
The indicator should go out since I already launched the app 

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.3.90
KDE Frameworks Version: 6.14.0
Qt Version: 6.9.0
Kernel Version: 6.14.7-arch2-1 (64-bit)
Graphics Platform: Wayland
Comment 1 The Entropyst 2025-05-26 13:12:39 UTC
It is also worth mentioning that the indicator also still here if opened from the "Favorite" section of kickoff if the app is pinned.
Comment 2 Nate Graham 2025-05-27 17:38:12 UTC
Can reproduce.
Comment 3 Kai Uwe Broulik 2025-05-27 17:51:47 UTC
> 2. Launch the app using the build it search bar in kickoff.

That’s not the point of this feature. The point is that it teaches you where to find the app on the menu.
Comment 4 Kai Uwe Broulik 2025-05-27 18:04:32 UTC
But I’ll see if  can check the activity scoring stuff to track app launches throughout the system (the same mechanism p-b-i reminder detects your browser being launched)
Comment 5 Bug Janitor Service 2025-05-27 18:42:27 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/5527
Comment 6 SDon 2025-05-31 14:38:33 UTC
In case you have 2 kickoff menus (e. g. you have 2 panels and both has 1), when you open the newly installed app from one of them, the other will still have the new badge.
Comment 7 Kai Uwe Broulik 2025-06-04 15:53:37 UTC
Git commit 6c9ec918ffa4d844106032f97261b860ad74646c by Kai Uwe Broulik.
Committed on 04/06/2025 at 11:16.
Pushed by broulik into branch 'master'.

applets/kicker: Use KActivityManager to track app launches

Ensures that we also catch app launches outside the application model,
be it through KRunner, desktop shortcut, or favorites list.

Co-authored-by: Oliver Beard <olib141@outlook.com>

M  +0    -10   applets/kicker/appsmodel.cpp
M  +94   -17   applets/kicker/rootmodel.cpp
M  +9    -0    applets/kicker/rootmodel.h

https://invent.kde.org/plasma/plasma-workspace/-/commit/6c9ec918ffa4d844106032f97261b860ad74646c
Comment 8 Kai Uwe Broulik 2025-06-04 16:12:09 UTC
Git commit aaf7a8755abb15628009638f138b4adc4711b954 by Kai Uwe Broulik.
Committed on 04/06/2025 at 15:53.
Pushed by broulik into branch 'Plasma/6.4'.

applets/kicker: Use KActivityManager to track app launches

Ensures that we also catch app launches outside the application model,
be it through KRunner, desktop shortcut, or favorites list.

Co-authored-by: Oliver Beard <olib141@outlook.com>


(cherry picked from commit 6c9ec918ffa4d844106032f97261b860ad74646c)

Co-authored-by: Kai Uwe Broulik <kde@privat.broulik.de>

M  +0    -10   applets/kicker/appsmodel.cpp
M  +94   -17   applets/kicker/rootmodel.cpp
M  +9    -0    applets/kicker/rootmodel.h

https://invent.kde.org/plasma/plasma-workspace/-/commit/aaf7a8755abb15628009638f138b4adc4711b954