applets/kicker: Use KActivityManager to trach app launches

Ensures that we also catch app launches outside the application model,
be it through KRunner, desktop shortcut, or favorites list.

BUG: 504813